task/frontend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: frontend-app
  name: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend-app
    spec:
      containers:
      - image: nvrbckdown/something
        name: something
        resources: {}
status: {}
