task/deploy12.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-12
  labels:
    app: my-app-12
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: my-app-12
  template:
    metadata:
      labels:
        app: my-app-12
    spec:
      containers:
      - name: my-app-12-container
        image: podman96/docker-go:v1
#        image: khurshidumid/app-14:v1
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
      - name: repo-1
        image: nvrbckdown/repo-1
        ports:
          - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      - name: repo-2
        image: nvrbckdown/repo-2
        ports:
          - containerPort: 80
        livenessProbe:
          httpGet:
            path: /config
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: my-app-12-service
spec:
  selector:
    app: my-app-12  # Ensure this matches your Deployment labels
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80         # Service port
      targetPort: 80 # Container port (update as per your app)
