task/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-12-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Specifies the NGINX Ingress controller
  rules:
  - host: mid-term-khurshid.sts404.uz  # Replace with your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-12-service  # Match your service name
            port:
              number: 80
